# Bluerov2-Heavy-From-Simulation-to-Reality

./: README.md
eight-thurster/devel/: .catkin
eight-thurster/devel/lib/bluerov2_control/: bridge.py  video
eight-thurster/devel/lib/bluerov2_dobmpc/: bluerov2_inspection_node  bluerov2_random_node
eight-thurster/devel/lib/bluerov2_mpc/: bluerov2_mpc_node
eight-thurster/devel/lib/pkgconfig/: bluerov2_control.pc  bluerov2_description.pc  bluerov2_description_real.pc  bluerov2_dobmpc.pc  bluerov2_dobmpc_real.pc  bluerov2_gazebo.pc  bluerov2_gazebo_real.pc  bluerov2_mpc.pc  bluerov2_mpc_real.pc  bluerov2_states.pc  bluerov2_states_real.pc  uuv_assistants.pc  uuv_auv_control_allocator.pc  uuv_control_cascaded_pid.pc  uuv_control_msgs.pc  uuv_control_utils.pc  uuv_descriptions.pc  uuv_gazebo.pc  uuv_gazebo_plugins.pc  uuv_gazebo_ros_plugins.pc  uuv_gazebo_ros_plugins_msgs.pc  uuv_gazebo_worlds.pc  uuv_sensor_ros_plugins.pc  uuv_sensor_ros_plugins_msgs.pc  uuv_teleop.pc  uuv_thruster_manager.pc  uuv_trajectory_control.pc  uuv_tutorial_disturbances.pc  uuv_tutorial_dp_controller.pc  uuv_tutorial_seabed_world.pc  (+3 more)
real_world/: README.md
real_world/devel/: .catkin  local_setup.fish
real_world/src/real_test/: CMakeLists.txt
real_world/src/real_test/config/: dobmpc_to_real.yaml
real_world/src/real_test/scripts/: pubreal.py
ros_workspace/: README.md  launch_qualisys.sh
ros_workspace/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_workspace/install/ros-qualisys/: .rosinstall  setup.fish
ros_workspace/log/: latest_build
(+266 files in other folders)
